--- a/noticia/app/src/main/AndroidManifest.xml
+++ b/noticia/app/src/main/AndroidManifest.xml
@@ -21,6 +21,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".NoticiaDetalhadaActivity"
+            android:exported="true"
+            tools:ignore="Instantiatable">
+
+        </activity>
+
 
     </application>
 
